chore: regenerate submission ZIP from current code; gitignore generated artifacts